--- a/prepros-6.config
+++ b/prepros-6.config
@@ -6,6 +6,10 @@
     {
       "path": "style/app.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"style/app.css\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "style/style.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
@@ -26,7 +30,7 @@
   },
   "imports": [],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
@@ -67,7 +71,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7881,
+    "port": 7882,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
