--- a/prepros-6.config
+++ b/prepros-6.config
@@ -28,7 +28,15 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [],
+  "imports": [
+    {
+      "path": "style/style.scss",
+      "imports": [
+        "style/slick.scss",
+        "style/slick-theme.scss"
+      ]
+    }
+  ],
   "projectView": {
     "selectedView": "file-tree"
   },
@@ -71,7 +79,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7882,
+    "port": 7883,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
